# bloat

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: add.rs  convert.rs  copy.rs  lib.rs  podstack.rs  radix.rs  remainder.rs  sub.rs
src/div/: mod.rs  schoolbook.rs
src/mul/: mod.rs  schoolbook.rs
src/sqrt/: mod.rs  newton.rs
